# gsp_sc

./: .gitignore  Makefile  README.md  TODO.md  pyproject.toml
.github/: copilot-instructions.md
doc/: design.md  goals.md  user_roles.md  user_stories.md  what_do_i_want.md
examples/: __animator_network.py  __serialisation_json_file_diffable.py  _amesh.py  _animator_matplotlib.py  _bla.py  _object3d_rendering.py  all_visuals.py  animator_matplotlib.py  animator_matplotlib_video.py  animator_network.py  animator_network_video.py  basic.py  basic_copy.py  dvz_image_example.py  dvz_mesh_example.py  dvz_points_example.py  image_example.py  mesh_example.py  multi_figure.py  ndarray_like_visual_all.py  ndarray_like_visual_network.py  network_client.py  network_client_diff.py  network_viewport_multiple.py  renderer_events.py  serialisation_json_cycle.py  serialisation_json_file.py  transform_build_sample.py  transform_raw_chain.py  transform_raw_link.py  transform_raw_serialisation.py  viewport_multiple.py  viewport_multiple_camera.py
scripts/: check_expected_output.py  convert_obj_for_meshio.py  network_server.py  run_all_examples.py  run_example.py  run_example_TOREMOVE.py  validate_gsp_schema.py
tests/: test_diffable_ndarray.py  test_diffable_ndarray_serialisation.py  test_ndarray_like.py  test_object3d_core.py  test_object3d_core_complex.py  test_object3d_look_at.py  test_object3d_rotations.py  test_transform_chain.py  test_transform_serialisation.py
tmp/: async_plotter.py  cast_for_pyright.py  dynamic_matplotlib.py  jsonpatch_bla.py  sort_1_million.py  (+4 more)
(+214 files in other folders)
