[project]
name = "gsp-sc"
version = "0.1.0"
description = ""
authors = [
    {name = "Jerome Etienne",email = "jerome.etienne@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy ==1.26.4",
    "blinker (>=1.9.0,<2.0.0)",
    "mpl3d @ git+https://github.com/jeromeetienne/matplotlib-3d",
    "requests (>=2.32.5,<3.0.0)",
    "requests-file (>=2.1.0,<3.0.0)",
    "meshio (>=5.3.5,<6.0.0)",
    "nptyping (>=2.5.0,<3.0.0)",
    "jsonpatch (>=1.33,<2.0)",
    "msgpack (>=1.1.1,<2.0.0)",
    "jsonschema (>=4.25.1,<5.0.0)",
    "flask (>=3.1.2,<4.0.0)",
    "http-constants (>=0.5.0,<0.6.0)"
]

[tool.poetry]
packages = [{include = "gsp_sc", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

# Configuration for the Black code formatter 
[tool.black]
line-length = 160   # to match the 79 character limit of PEP 8, but allow some extra space for longer lines
